--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -2,10 +2,33 @@
   display: flex;
 
   &__item {
+    position: relative;
   }
 
   &__photo {
     display: block;
     width: 100%;
+    transition: transform 0.5s;
+  }
+
+  &__photo-name {
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    font-size: 1.8rem;
+    font-weight: 600;
+    opacity: 0;
+    transition: all 0.5s;
+  }
+
+  &__photo:hover {
+    transform: scale(1.05);
+  }
+
+  &__photo:hover + &__photo-name {
+    opacity: 1;
+    top: 50%;
   }
 }
