--- a/sass/components/_user-nav.scss
+++ b/sass/components/_user-nav.scss
@@ -1,7 +1,6 @@
 .user-nav {
   display: flex;
   align-items: center;
-
   align-self: stretch;
   & > * {
     padding: 0 2rem;
@@ -17,6 +16,7 @@
 
   &__icon-box {
     position: relative;
+    // z-index: 2;
   }
 
   &__icon {
@@ -42,9 +42,75 @@
     justify-content: center;
   }
 
+  &__user {
+    position: relative;
+  }
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
+  }
+
+  &__message-box--1,
+  &__message-box--2,
+  &__setting-box {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+
+    width: 20rem;
+    height: 0;
+    opacity: 0;
+    z-index: -100;
+    transition: all 0.5s;
+    padding: 2rem;
+    border: 2px solid rgba(black, 0.1);
+  }
+
+  &__icon-box:hover &__message-box--1,
+  &__icon-box:hover &__message-box--2,
+  &__user:hover &__setting-box {
+    // transform: translate(0, 0);
+    height: 20rem;
+    overflow: auto;
+
+    opacity: 1;
+    z-index: 100;
+
+    // 隐藏滚动条
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+  }
+  ::-webkit-scrollbar {
+    display: none; /* Chrome Safari */
+  }
+
+  &__message,
+  &__setting {
+    list-style: none;
+  }
+
+  &__message {
+  }
+
+  &__message-item {
+    padding: 1rem 0.5rem;
+  }
+
+  &__setting-box {
+    width: 15rem;
+  }
+
+  &__setting {
+  }
+
+  &__setting-item {
+    padding: 1rem 0.5rem;
+  }
+
+  &__setting-item:hover,
+  &__message-item:hover {
+    background-color: var(--color-grey-light-2);
   }
 }
