--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -21,7 +21,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   @media only screen and (max-width: $bp-smallest) {
     flex-wrap: wrap;
     // align-content: space-around;
@@ -31,7 +30,7 @@
 
 .content {
   display: flex;
-
+  z-index: -2;
   @media only screen and (max-width: $bp-medium) {
     flex-direction: column;
   }
